# Sort-Color-

./: .env  .gitignore  app.py  colors.py  config.py  database.py  image_processor.py  keyboards.py  languages.py  main.py  main_bot.py  manual_entry.py  pyproject.toml  requirements.txt  setup.py  solver.py  visualizer.py
bot/: handlers.py  states.py
core/: image_processor.py  puzzle.py  solver.py  visualizer.py
ot/: keyboards.py
utils/: helpers.py  validators.py
