[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-sort-bot"
version = "1.0.0"
description = "Telegram bot to solve Water Sort Puzzle"
authors = [{name = "You", email = "your@email.com"}]
dependencies = [
    "Flask==2.3.3",
    "gunicorn==20.1.0",
    "python-telegram-bot==20.7",
    "python-dotenv==1.0.0",
]
